# new8

./: LICENSE  README.md  modules.txt  pyproject.toml  setup.py  site_config.json
commercium/: api.py  auth.py  hooks.py  modules.txt  oauth.py
commercium/commercium/doctype/commercium/: commercium.js  commercium.json  commercium.py
commercium/config/: commerciumconnector.py  desktop.py  docs.py
commercium/public/js/: commercium.js
my_universal_auth/: hooks.py
typings/frappe/: __init__.pyi
